--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2035,10 +2035,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2842ff70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 17\u001b[0m\n\u001b[0;32m      8\u001b[0m video, fourcc, fps, size \u001b[38;5;241m=\u001b[39m load_video_to_numpy(LOAD_FNAME)\n\u001b[0;32m     10\u001b[0m tensor_video \u001b[38;5;241m=\u001b[39m TensorVideo(\n\u001b[0;32m     11\u001b[0m     compression_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtucker\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     12\u001b[0m     quality\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m30.0\u001b[39m,\n\u001b[0;32m     13\u001b[0m     chunk_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m30\u001b[39m,\n\u001b[0;32m     14\u001b[0m     decoded_data_type\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39muint8,\n\u001b[0;32m     15\u001b[0m     verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 17\u001b[0m \u001b[43mtensor_video\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvideo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m restored_video \u001b[38;5;241m=\u001b[39m tensor_video\u001b[38;5;241m.\u001b[39mdecode()\n",
+      "File \u001b[1;32mC:\\Programming\\Made_Mail\\TensorVision\\cvtcomp\\base\\base.py:124\u001b[0m, in \u001b[0;36mTensorVideo.encode\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m    122\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m frame_no \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunk_size):\n\u001b[0;32m    123\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mverbose:\n\u001b[1;32m--> 124\u001b[0m         compressed_data_chunk, metadata \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencoder\u001b[38;5;241m.\u001b[39mencode(\n\u001b[0;32m    125\u001b[0m             data[frame_no:frame_no \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunk_size, :, :, :]\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m    126\u001b[0m         )\n\u001b[0;32m    127\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmetadata\u001b[38;5;241m.\u001b[39mappend(metadata)\n\u001b[0;32m    128\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -2049,7 +2062,12 @@
     "\n",
     "video, fourcc, fps, size = load_video_to_numpy(LOAD_FNAME)\n",
     "\n",
-    "tensor_video = TensorVideo(compression_type='tucker', quality=30.0, chunk_size=20, decoded_data_type=np.uint8)\n",
+    "tensor_video = TensorVideo(\n",
+    "    compression_type='tucker',\n",
+    "    quality=30.0,\n",
+    "    chunk_size=30,\n",
+    "    decoded_data_type=np.uint8,\n",
+    "    verbose=True)\n",
     "\n",
     "tensor_video.encode(video)\n",
     "\n",
